Fixes spacing

--- a/app/assets/stylesheets/registries.scss
+++ b/app/assets/stylesheets/registries.scss
@@ -75,7 +75,7 @@ div.row.registry-row {
 }
 
 div.form-group#search_box {
-  padding-bottom: 3em;
+  padding: 3em 0 3em 0;
 }
 .show-registry {
   padding-top: 2em;
